Home, Login and Register components made. Routing added.

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
        folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="%PUBLIC_URL%/dist/css/skins/_all-skins.min.css">
 
+    <link rel="stylesheet" href="../../plugins/iCheck/square/blue.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -38,7 +39,7 @@
     -->
     <title>React App</title>
   </head>
-  <body class="hold-transition skin-black sidebar-mini">
+  <body id="body" class="hold-transition skin-black sidebar-mini">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <div class="wrapper">
@@ -72,5 +73,6 @@
     <script src="%PUBLIC_URL%/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
     <!-- ChartJS -->
     <script src="%PUBLIC_URL%/bower_components/chart.js/Chart.js"></script>
+    <script src="%PUBLIC_URL%/plugins/iCheck/icheck.min.js"></script>
   </body>
 </html>
