--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Slick</title>
   </head>
   <body id="body" class="hold-transition skin-black sidebar-mini">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    
     <div id="root">
       <div class="wrapper">
         
